--- a/Homepage/homepage/homepage.html
+++ b/Homepage/homepage/homepage.html
@@ -24,7 +24,7 @@
     <div class="main">
         <!-- Header -->
         <header class="header">
-            <div class="grid">
+            <!-- <div class="grid"> -->
                 <!-- Tên Shop -->
                 <a href="homepage.html" class="name">P2HandA</a>
     
@@ -53,32 +53,40 @@
                  <nav class="header__icons">
                     <ul class="header__icons-list">
                         <li class="header__icons-item">
-                            <div>
+                            <div class="icons-item">
                                 <a href="login.html"><i class="fa-solid fa-user"></i></a>
                             </div>
-                            <div>
+                            <div class="icons-item__text">
                                 <p>Tài khoản</p>
                                 <span>Đăng nhập</span>
                             </div>
                         </li>
                         <li class="header__icons-item">
-                            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-                            <span>Tìm kiếm sản phẩm</span>
+                            <div class="icons-item">
+                                <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                            </div>
+                            <div  class="icons-item__text">
+                                <span>Tìm kiếm sản phẩm</span>
+                            </div>
                         </li>
                         <li class="header__icons-item">
-                            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-                            <p>Giỏ hàng</p>
-                            <span>0 sản phẩm</span>
+                            <div class="icons-item">
+                                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                            </div>
+                            <div  class="icons-item__text">
+                                <p>Giỏ hàng</p>
+                                <span>0 sản phẩm</span>
+                            </div>
                         </li>
                     </ul>
                 </nav>
-            </div>
+            <!-- </div> -->
         </header>
 
         <!-- Content -->
         <div class="container">
             <!-- Div1 -->
-             <div class="container__image">
+            <div class="container__image">
                 <!-- Tiêu đề -->
                 <div class="image-title">
                     <h1>THANH TOÁN CHUYỂN KHOẢN GIẢM NGAY 10%</h1>
@@ -86,55 +94,188 @@
 
                 <!-- Ảnh -->
                 <div class="image-img">
-
                     <div class="img1">
-                        <h1>THANH TOÁN CHUYỂN KHOẢN GIẢM NGAY 10%</h1>
+                        <a href="#">
+                            <img src="./data/img/banner/P2HANDA.com.png" alt="anh1">
+                        </a>
                     </div>
 
                     <div class="img23">
                         <div class="img2">
-                            <h1>THANH TOÁN CHUYỂN KHOẢN GIẢM NGAY 10%</h1>
+                            <a href="#">
+                                <div class="img2__info">
+                                    <h1>Adidas</h1>
+                                    <button class="bt-xem">Xem ngay</button>
+                                </div>
+                                <img src="./data/img/banner/image1.jpg" alt="anh2">
+                            </a>
                         </div>
 
                         <div class="img3">
-                            <h1>THANH TOÁN CHUYỂN KHOẢN GIẢM NGAY 10%</h1>
-                        </div>
-                    </div>
-                    <!-- <div class="image-img1">
-                        <img src="./data/img/banner/P2HANDA.com.png" alt="anh1">
-                    </div> -->
-
-                    <!-- <div class="image-img1">
-                        <img src="./data/img/banner/image1.jpg" alt="anh2">
-                    </div>
-
-                    <div class="image-img1">
-                        <img src="./data/img/banner/image2.jpg" alt="anh3"> -->
-                    </div>
-                    <!-- Banner -->
-                    <div class="image-banner">
-                        <div class="image-banner1">
-                            <h1>THANH TOÁN CHUYỂN KHOẢN GIẢM NGAY 10%</h1>
+                            <a href="#">
+                                <div class="img3__info">
+                                    <h1>Nike</h1>
+                                    <button class="bt-xem">Xem ngay</button>
+                                </div>
+                                <img src="./data/img/banner/image2.jpg" alt="anh3">
+                            </a>
                         </div>
                     </div>
                 </div>
+                
+                <!-- Banner -->
+                <div class="image-banner">
+                    <div class="image-banner1">
+                        <a href="#">
+                            <img src="./data/img/banner/banner.png" alt="anh4">
+                        </a>
+                    </div>
+                </div>
+            </div>
 
             <!-- Div2 -->
             <div class="container__product">
                     <!-- Sale -->
                     <div class="container__product-sale">
                         <h1>Sale</h1>
-                        <section class="container__product-sale1">
-                            <p>Hi</p>
-                        </section>
+                        <div class="grid">
+                            <!-- Product Sale 1 -->
+                            <div class="card">
+                                 <div class="relative">
+                                     <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                     <div class="badge badge--sale">-70%</div>
+                                     <div class="badge badge--new">New</div>
+                                </div>
+
+                                <div class="mt-4">
+                                    <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
+                                    <p>NIKE</p>
+                                    <p class="price--old">1,395,000₫</p>
+                                    <p class="price--new">418,500₫</p>
+                                </div>
+                            </div>
+
+                            <!-- Product Sale 2 -->
+                            <div class="card">
+                                <div class="relative">
+                                    <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                    <div class="badge badge--sale">-70%</div>
+                                    <div class="badge badge--new">New</div>
+                               </div>
+
+                               <div class="mt-4">
+                                   <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
+                                   <p>NIKE</p>
+                                   <p class="price--old">1,395,000₫</p>
+                                   <p class="price--new">418,500₫</p>
+                               </div>
+                           </div>
+
+                           <!-- Product Sale 3 -->
+                            <div class="card">
+                            <div class="relative">
+                                <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                <div class="badge badge--sale">-70%</div>
+                                <div class="badge badge--new">New</div>
+                           </div>
+
+                           <div class="mt-4">
+                               <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
+                               <p>NIKE</p>
+                               <p class="price--old">1,395,000₫</p>
+                               <p class="price--new">418,500₫</p>
+                           </div>
+                            </div>
+
+                            <!-- Product Sale 4 -->
+                            <div class="card">
+                                <div class="relative">
+                                    <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                    <div class="badge badge--sale">-70%</div>
+                                    <div class="badge badge--new">New</div>
+                               </div>
+
+                               <div class="mt-4">
+                                   <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
+                                   <p>NIKE</p>
+                                   <p class="price--old">1,395,000₫</p>
+                                   <p class="price--new">418,500₫</p>
+                               </div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Best Seller -->
                     <div class="container__product-best">
+                        <div class="besthome">
+                            <img src="./data/img/producthome/Mürsel Güven.jpg" alt="anh">
+                        </div>
                         <h1>Best Seller</h1>
-                        <section class="container__product-best1">
-                            <p>Hi</p>
-                        </section>
+                        <div class="grid">
+                            <!-- Product Sale 1 -->
+                            <div class="card">
+                                 <div class="relative">
+                                     <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                     <div class="badge badge--sale">-70%</div>
+                                     <div class="badge badge--new">New</div>
+                                </div>
+
+                                <div class="mt-4">
+                                    <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
+                                    <p>NIKE</p>
+                                    <p class="price--old">1,395,000₫</p>
+                                    <p class="price--new">418,500₫</p>
+                                </div>
+                            </div>
+
+                            <!-- Product Sale 2 -->
+                            <div class="card">
+                                <div class="relative">
+                                    <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                    <div class="badge badge--sale">-70%</div>
+                                    <div class="badge badge--new">New</div>
+                               </div>
+
+                               <div class="mt-4">
+                                   <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
+                                   <p>NIKE</p>
+                                   <p class="price--old">1,395,000₫</p>
+                                   <p class="price--new">418,500₫</p>
+                               </div>
+                           </div>
+
+                           <!-- Product Sale 3 -->
+                            <div class="card">
+                            <div class="relative">
+                                <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                <div class="badge badge--sale">-70%</div>
+                                <div class="badge badge--new">New</div>
+                           </div>
+
+                           <div class="mt-4">
+                               <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
+                               <p>NIKE</p>
+                               <p class="price--old">1,395,000₫</p>
+                               <p class="price--new">418,500₫</p>
+                           </div>
+                            </div>
+
+                            <!-- Product Sale 4 -->
+                            <div class="card">
+                                <div class="relative">
+                                    <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                    <div class="badge badge--sale">-70%</div>
+                                    <div class="badge badge--new">New</div>
+                               </div>
+
+                               <div class="mt-4">
+                                   <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
+                                   <p>NIKE</p>
+                                   <p class="price--old">1,395,000₫</p>
+                                   <p class="price--new">418,500₫</p>
+                               </div>
+                            </div>
+                        </div>
                     </div>
             </div>
 
@@ -142,15 +283,33 @@
              <div class="container__text">
                 <div class="container__text-img">
                     <div class="text__img1">
-                        <h1>Hi</h1>
+                        <a href="#">
+                            <div class="text__img1-info">
+                                <h1>Men</h1>
+                                <button class="bt-xem">Xem ngay</button>
+                            </div>
+                            <img src="./data/img/banner/image1.jpg" alt="anh2">
+                        </a>
                     </div>
 
                     <div class="text__img2">
-                        <h1>Hi</h1>
+                        <a href="#">
+                            <div class="text__img2-info">
+                                <h1>Men</h1>
+                                <button class="bt-xem">Xem ngay</button>
+                            </div>
+                            <img src="./data/img/banner/image1.jpg" alt="anh2">
+                        </a>
                     </div>
 
                     <div class="text__img3">
-                        <h1>Hi</h1>
+                        <a href="#">
+                            <div class="text__img3-info">
+                                <h1>Men</h1>
+                                <button class="bt-xem">Xem ngay</button>
+                            </div>
+                            <img src="./data/img/banner/image1.jpg" alt="anh2">
+                        </a>
                     </div>
                 </div>
              </div>
@@ -158,10 +317,43 @@
 
         <!-- Featured -->
          <div class="featured">
-            <div class="featured__list">
-                <h1>Featured</h1>
+            <div class="fl1">
+                <div class="fl1__icon">
+                    <img src="./data/img/featured/accreditation.png" alt="Cam kết chất lượng">
+                </div>
+                <div class="fl__text">
+                    <span>Cam kết chất lượng</span>
+                    <p>Cam kết chuẩn mẫu sản phẩm</p>
+                </div>
             </div>
-         </div>
+            <div class="fl1">
+                <div class="fl1__icon">
+                    <img src="./data/img/featured/accreditation.png" alt="Cam kết chất lượng">
+                </div>
+                <div class="fl__text">
+                    <span>Cam kết chất lượng</span>
+                    <p>Cam kết chuẩn mẫu sản phẩm</p>
+                </div>
+            </div>
+            <div class="fl1">
+                <div class="fl1__icon">
+                    <img src="./data/img/featured/accreditation.png" alt="Cam kết chất lượng">
+                </div>
+                <div class="fl__text">
+                    <span>Cam kết chất lượng</span>
+                    <p>Cam kết chuẩn mẫu sản phẩm</p>
+                </div>
+            </div>
+            <div class="fl1">
+                <div class="fl1__icon">
+                    <img src="./data/img/featured/accreditation.png" alt="Cam kết chất lượng">
+                </div>
+                <div class="fl__text">
+                    <span>Cam kết chất lượng</span>
+                    <p>Cam kết chuẩn mẫu sản phẩm</p>
+                </div>
+            </div>
+        </div>
 
 
         <!-- Footer -->
