--- a/Homepage/homepage/homepage.html
+++ b/Homepage/homepage/homepage.html
@@ -357,10 +357,57 @@
 
 
         <!-- Footer -->
-        <footer class="footer">
-            <h1>THANH TOÁN CHUYỂN KHOẢN GIẢM NGAY 10%</h1>
+         <div class="container__footer">
+            <div class="footer">
 
-        </footer>
+                <div class="newletter">
+                    <div class="nl-left">
+                        <h1>ĐỪNG BỎ LỠ THÔNG TIN</h1>
+                        <h2>Đăng kí nhận bản tin để không bỏ lỡ thông tin khuyến mãi, luôn nhận được chương trình ưu đãi đặc biệt.</h2>
+                    </div>
+
+                    <div class="nl-right">
+                        <div class="nl-right-input">
+                            <input type="text" placeholder="Nhập email của bạn" />
+                            <button>Đăng kí</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-section">
+                    <div class="footer-item">
+                        <h2>Company</h2>
+                        <p><a href=""> About Us</a></p>
+                        <p><a href=""> Contact Us</a></p>
+                        <p><a href=""> Our Services</a></p>
+                        <p><a href=""> Privacy Policy</a></p>
+                    </div>
+                    <div class="footer-item">
+                        <h2>Get Help </h2>
+                        <p><a href=""> FAQ</a></p>
+                        <p><a href=""> Shipping </a></p>
+                        <p><a href=""> Retuns </a></p>
+                        <p><a href=""> Payment Options </a></p>
+                    </div>
+                    <div class="footer-item">
+                        <h2>Online Shop</h2>
+                        <p><a href=""> Blogs </a></p>
+                        <p><a href=""> Watch </a></p>
+                        <p><a href=""> Shoes </a></p>
+                        <p><a href=""> Bress </a></p>
+                    </div>
+                    <div class="footer-item social">
+                        <h2> Follow Us </h2>
+                        <ul>
+                            <li> <i class="fa-brands fa-instagram"></i> </li>
+                            <li> <i class="fa-brands fa-linkedin-in"></i> </li>
+                            <li> <i class="fa-brands fa-youtube"></i> </li>
+                            <li> <i class="fa-brands fa-twitter"></i> </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+         </div>
     </div>
 
 
