--- a/Moi/homepage.html
+++ b/Moi/homepage.html
@@ -24,7 +24,6 @@
     <div class="main">
         <!-- Header -->
         <header class="header">
-            <!-- <div class="grid"> -->
                 <!-- Tên Shop -->
                 <a href="homepage.html" class="name">P2HandA</a>
     
@@ -80,7 +79,6 @@
                         </li>
                     </ul>
                 </nav>
-            <!-- </div> -->
         </header>
 
         <!-- Content -->
@@ -142,7 +140,7 @@
                             <!-- Product Sale 1 -->
                             <div class="card">
                                  <div class="relative">
-                                     <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                     <img src="./data/img/producthome/AIR JORDAN 1 X OFF-WHITE X RETRO HIGH OG CHICAGO.png" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
                                      <div class="badge badge--sale">-70%</div>
                                      <div class="badge badge--new">New</div>
                                 </div>
@@ -158,48 +156,48 @@
                             <!-- Product Sale 2 -->
                             <div class="card">
                                 <div class="relative">
-                                    <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                    <img src="./data/img/producthome/VANS Old Skool.png" alt="Vans Old Skool Classic Black – Size Nữ Bigsale">
                                     <div class="badge badge--sale">-70%</div>
                                     <div class="badge badge--new">New</div>
                                </div>
 
                                <div class="mt-4">
-                                   <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
-                                   <p>NIKE</p>
-                                   <p class="price--old">1,395,000₫</p>
-                                   <p class="price--new">418,500₫</p>
+                                   <h2>Vans Old Skool Classic Black – Size Nữ Bigsale</h2>
+                                   <p>VANS</p>
+                                   <p class="price--old">1,295,000₫</p>
+                                   <p class="price--new">388,500₫</p>
                                </div>
                            </div>
 
                            <!-- Product Sale 3 -->
                             <div class="card">
                             <div class="relative">
-                                <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                <img src="./data/img/producthome/Nike Air Force 1 Low White-Grey.png" alt="Nike Air Force 1 Low White/Grey">
                                 <div class="badge badge--sale">-70%</div>
                                 <div class="badge badge--new">New</div>
                            </div>
 
                            <div class="mt-4">
-                               <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
+                               <h2>Nike Air Force 1 Low White/Grey</h2>
                                <p>NIKE</p>
-                               <p class="price--old">1,395,000₫</p>
-                               <p class="price--new">418,500₫</p>
+                               <p class="price--old">1,295,000₫</p>
+                               <p class="price--new">775,000₫</p>
                            </div>
                             </div>
 
                             <!-- Product Sale 4 -->
                             <div class="card">
                                 <div class="relative">
-                                    <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
+                                    <img src="./data/img/producthome/Adidas Superstar Running White.png" alt="Adidas Superstar Running White">
                                     <div class="badge badge--sale">-70%</div>
                                     <div class="badge badge--new">New</div>
                                </div>
 
                                <div class="mt-4">
-                                   <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
-                                   <p>NIKE</p>
-                                   <p class="price--old">1,395,000₫</p>
-                                   <p class="price--new">418,500₫</p>
+                                   <h2>Adidas Superstar Running White</h2>
+                                   <p>ADIDAS</p>
+                                   <p class="price--old">1,195,000₫</p>
+                                   <p class="price--new">765,000₫</p>
                                </div>
                             </div>
                         </div>
@@ -214,67 +212,67 @@
                         </div>
                         <h1>Best Seller</h1>
                         <div class="grid">
-                            <!-- Product Sale 1 -->
+                            <!-- Product BS 1 -->
                             <div class="card">
                                  <div class="relative">
-                                     <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
-                                     <div class="badge badge--sale">-70%</div>
+                                     <img src="./data/img/producthome/Giày Thể Thao Nike Air Monarch IV Cross.png" alt=" Giày Thể Thao Nike Air Monarch IV Cross">
+                                     <div class="badge badge--sale">-10%</div>
                                      <div class="badge badge--new">New</div>
                                 </div>
 
                                 <div class="mt-4">
-                                    <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
-                                    <p>NIKE</p>
-                                    <p class="price--old">1,395,000₫</p>
-                                    <p class="price--new">418,500₫</p>
+                                    <h2> Giày Thể Thao Nike Air Monarch IV Cross</p>
+                                        <p>NIKE</p>
+                                    <p class="price--old">599,000₫</p>
+                                    <p class="price--new">539,500₫</p>
                                 </div>
                             </div>
 
-                            <!-- Product Sale 2 -->
+                            <!-- Product BS 2 -->
                             <div class="card">
                                 <div class="relative">
-                                    <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
-                                    <div class="badge badge--sale">-70%</div>
+                                    <img src="./data/img/producthome/Giày Sneaker Casual Adidas Superstar OG Vintage White.png" alt="Giày Sneaker Casual Adidas Superstar OG Vintage White">
+                                    <div class="badge badge--sale">-15%</div>
                                     <div class="badge badge--new">New</div>
                                </div>
 
                                <div class="mt-4">
-                                   <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
-                                   <p>NIKE</p>
-                                   <p class="price--old">1,395,000₫</p>
-                                   <p class="price--new">418,500₫</p>
+                                   <h2>Giày Sneaker Casual Adidas Superstar OG Vintage White</p>
+                                    <p>ADIDAS</p>
+                                   <p class="price--old">599,000₫</p>
+                                   <p class="price--new">509,150₫</p>
                                </div>
                            </div>
 
-                           <!-- Product Sale 3 -->
+                           <!-- Product BS 3 -->
                             <div class="card">
                             <div class="relative">
-                                <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
-                                <div class="badge badge--sale">-70%</div>
+                                <img src="./data/img/producthome/Giày MLB BIG BALL CHUNKY NEW YORK YANKEES.png" alt="Giày MLB BIG BALL CHUNKY NEW YORK YANKEES" style="object-fit: cover;">
+                                <div class="badge badge--sale">-10%</div>
                                 <div class="badge badge--new">New</div>
                            </div>
 
                            <div class="mt-4">
-                               <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
-                               <p>NIKE</p>
-                               <p class="price--old">1,395,000₫</p>
-                               <p class="price--new">418,500₫</p>
+                               <h2>Giày MLB BIG BALL CHUNKY NEW YORK YANKEES</h2>
+                               <p>MLB</p>
+                               <p class="price--old">1,299,000₫</p>
+                               <p class="price--new">1,169,100₫</p>
                            </div>
                             </div>
 
-                            <!-- Product Sale 4 -->
+                            <!-- Product BS 4 -->
                             <div class="card">
                                 <div class="relative">
-                                    <img src="./data/img/banner/image1.jpg" alt="Air Jordan 1 X Off-White X Retro High OG Chicago">
-                                    <div class="badge badge--sale">-70%</div>
+                                    <img src="./data/img/producthome/Giày Thể Thao Secondhand CONVERSE ONE STAR OX UNDERFEATED WHITE.png" alt=" Giày Thể Thao Secondhand CONVERSE ONE STAR OX UNDERFEATED WHITE">
+                                    <div class="badge badge--sale">-30%</div>
                                     <div class="badge badge--new">New</div>
                                </div>
 
                                <div class="mt-4">
-                                   <h2>Air Jordan 1 X Off-White X Retro High OG Chicago</h2>
-                                   <p>NIKE</p>
-                                   <p class="price--old">1,395,000₫</p>
-                                   <p class="price--new">418,500₫</p>
+                                   <h2> Giày Thể Thao Secondhand CONVERSE ONE STAR OX UNDERFEATED WHITE</h2>
+                                   <p>CONVERSE</p>
+                                   <p class="price--old">1,999,000₫</p>
+                                   <p class="price--new">1,399,300₫</p>
                                </div>
                             </div>
                         </div>
@@ -290,27 +288,27 @@
                                 <h1>Men</h1>
                                 <button class="bt-xem">Xem ngay</button>
                             </div>
-                            <img src="./data/img/banner/image1.jpg" alt="anh2">
+                            <img src="./data/img/producthome/MEN.jpg" alt="anh2">
                         </a>
                     </div>
 
                     <div class="text__img2">
                         <a href="#">
                             <div class="text__img2-info">
-                                <h1>Men</h1>
+                                <h1>WOMEN</h1>
                                 <button class="bt-xem">Xem ngay</button>
                             </div>
-                            <img src="./data/img/banner/image1.jpg" alt="anh2">
+                            <img src="./data/img/producthome/WOMEN.png" alt="anh2">
                         </a>
                     </div>
 
                     <div class="text__img3">
                         <a href="#">
                             <div class="text__img3-info">
-                                <h1>Men</h1>
+                                <h1>UNISEX</h1>
                                 <button class="bt-xem">Xem ngay</button>
                             </div>
-                            <img src="./data/img/banner/image1.jpg" alt="anh2">
+                            <img src="./data/img/producthome/UNISEX.jpg" alt="anh2">
                         </a>
                     </div>
                 </div>
@@ -322,38 +320,38 @@
             <div class="featured">
                 <div class="fl1">
                     <div class="fl1__icon">
-                        <img src="./data/img/featured/accreditation.png" alt="Cam kết chất lượng">
+                        <img src="./data/img/featured/medal.png" alt="Cam kết chất lượng">
                     </div>
                     <div class="fl__text">
-                        <span>Cam kết chất lượng</span>
+                        <span>Cam Kết Chất Lượng</span>
                         <p>Cam kết chuẩn mẫu sản phẩm</p>
                     </div>
                 </div>
                 <div class="fl1">
                     <div class="fl1__icon">
-                        <img src="./data/img/featured/accreditation.png" alt="Cam kết chất lượng">
+                        <img src="./data/img/featured/accreditation.png" alt="Bảo hành">
                     </div>
                     <div class="fl__text">
-                        <span>Cam kết chất lượng</span>
-                        <p>Cam kết chuẩn mẫu sản phẩm</p>
+                        <span>Hỗ Trợ Bảo Hành</span>
+                        <p>Bảo hành keo 6 tháng</p>
                     </div>
                 </div>
                 <div class="fl1">
                     <div class="fl1__icon">
-                        <img src="./data/img/featured/accreditation.png" alt="Cam kết chất lượng">
+                        <img src="./data/img/featured/money.png" alt="Thanh toán">
                     </div>
                     <div class="fl__text">
-                        <span>Cam kết chất lượng</span>
-                        <p>Cam kết chuẩn mẫu sản phẩm</p>
+                        <span>Thanh Toán </span>
+                        <p>Thanh toán khi nhận hàng</p>
                     </div>
                 </div>
                 <div class="fl1">
                     <div class="fl1__icon">
-                        <img src="./data/img/featured/accreditation.png" alt="Cam kết chất lượng">
+                        <img src="./data/img/featured/delivery.png" alt="Giao hàng nhanh chóng">
                     </div>
                     <div class="fl__text">
-                        <span>Cam kết chất lượng</span>
-                        <p>Cam kết chuẩn mẫu sản phẩm</p>
+                        <span>Giao Hàng Nhanh Chóng</span>
+                        <p>Giao hàng nhanh chóng trên toàn quốc</p>
                     </div>
                 </div>
             </div>
