Remake and update website

--- a/Homepage/cart.html
+++ b/Homepage/cart.html
@@ -11,30 +11,13 @@
     <table>
         <thead>
             <tr>
+                <th>Hãng</th>
                 <th>Sản phẩm</th>
-                <th>Giá</th>
+                <th>Giá (VND)</th>
                 <th>Số lượng</th>
                 <th>Tổng cộng</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>Tên sản phẩm 1</td>
-                <td>$10.00</td>
-                <td><input type="number" value="2"></td>
-                <td>$20.00</td>
-            </tr>
-            <tr>
-                <td>Tên sản phẩm 2</td>
-                <td>$5.00</td>
-                <td><input type="number" value="3"></td>
-                <td>$15.00</td>
-            </tr>
-            <tr>
-                <td colspan="3" style="text-align:right"><strong>Tổng cộng:</strong></td>
-                <td>$35.00</td>
-            </tr>
-        </tbody>
     </table>
 
     <button type="button">Cập nhật giỏ hàng</button>
