--- a/Homepage/login.html
+++ b/Homepage/login.html
@@ -6,8 +6,13 @@
     <!-- Thêm liên kết tới Font Awesome cho Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <a href="Homepage.html" class="back-home">Trở lại trang chủ</a>
+</div>
 <div class="loginform">
 
     <div class="right">
