--- a/Homepage/lienhe.html
+++ b/Homepage/lienhe.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./data/css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +25,7 @@
         <header class="header">
             <!-- <div class="grid"> -->
                 <!-- Tên Shop -->
-                <a href="Homepage.html" class="name">P2HandA</a>
+                <a href="Homepage.html" class="name1">P2HandA</a>
     
                 <!-- Thanh Bar -->
                  <nav class="header__navbar">
@@ -91,6 +90,13 @@
                         <ul>
                             <li>Từ thứ 2 đến thứ Chủ nhật</li>
                             <li>Từ 6h đến 22h</li>
+                        </ul>
+                        <ul>
+                        <li><a class="1" href="https://www.facebook.com/bgsneaker.vn/">Facebook: bgsneaker.vn</a></li>
+                        <li><a class="1" href="https://www.instagram.com/bgsneaker.vn/">Instagram: @bgsneaker.vn</a></li>
+                        <li><a class="1" href="https://bgsneaker.vn/collections/sneaker">SNEAKER: bgsneaker.vn/collections/sneaker</a></li>
+                        <li><a class="1" href="https://bgsneaker.vn/collections/slide-sandal-1">SLIDE: bgsneaker.vn/collections/slide-sandal-1</a></li>
+                        <li><a class="1" href="https://bgsneaker.vn/collections/bag">BAG CLOTHING: bgsneaker.vn/collections/bag</a></li>
                         </ul>
                     </article>
                 </section>
