--- a/Homepage/sp.html
+++ b/Homepage/sp.html
@@ -26,7 +26,7 @@
         <header class="header">
             <!-- <div class="grid"> -->
                 <!-- Tên Shop -->
-                <a href="Homepage.html" class="name">P2HandA</a>
+                <a href="Homepage.html" class="name1">P2HandA</a>
     
                 <!-- Thanh Bar -->
                  <nav class="header__navbar">
@@ -184,6 +184,96 @@
                                 </div>
                             </div>
                             <div class="sp">
+                                <img src="https://product.hstatic.net/1000383440/product/75838285-fe87-4811-a51f-b64e58adf403_412e542c268f4a38a279a4b2a3887b3f_master.jpg" alt="Puma Court Ultra Vapor Gray White 389368-09" />           
+                                <div class="button-add">
+                                    <button type="submit" title="Mua ngay" class="action"">Mua ngay</button>
+                                    <button type="submit" title="Thêm vào giỏ" class="action add-to-cart">Thêm vào giỏ</button>
+                                </div>
+                                <div class="sp-c">
+                                        <h3 class="name">
+                                            Puma Court Ultra Vapor Gray White 389368-09
+                                        </h3>
+                                </div>
+                                <div>	
+                                    <p class="gia">1,450,000₫</p>
+                                </div>
+                            </div>
+                            <div class="sp">
+                                <img src="https://product.hstatic.net/1000383440/product/af971d96-51a9-41dc-8d00-d99c0ad3c3f6_1f195eda51634aa6a9292de8a5745492_master.jpg" alt="Puma Court Ultra Vapor Gray White 389368-09" />           
+                                <div class="button-add">
+                                    <button type="submit" title="Mua ngay" class="action"">Mua ngay</button>
+                                    <button type="submit" title="Thêm vào giỏ" class="action add-to-cart">Thêm vào giỏ</button>
+                                </div>
+                                <div class="sp-c">
+                                        <h3 class="name">
+                                            ADIDAS VL COURT BASE W ID3714
+                                        </h3>
+                                </div>
+                                <div>	
+                                    <p class="gia">1,490,000₫</p>
+                                </div>
+                            </div>
+                            <div class="sp">
+                                <img src="https://product.hstatic.net/1000383440/product/1b58752e-63c4-43dd-926f-fb8088a88eb0_d375d37649e64fb3912eae24cdd0160f_master.jpg" alt="Puma Court Ultra Vapor Gray White 389368-09" />           
+                                <div class="button-add">
+                                    <button type="submit" title="Mua ngay" class="action"">Mua ngay</button>
+                                    <button type="submit" title="Thêm vào giỏ" class="action add-to-cart">Thêm vào giỏ</button>
+                                </div>
+                                <div class="sp-c">
+                                        <h3 class="name">
+                                            Adidas Samba OG Cloud White IE0877
+                                        </h3>
+                                </div>
+                                <div>	
+                                    <p class="gia">2,690,000₫</p>
+                                </div>
+                            </div>
+                            <div class="sp">
+                                <img src="https://product.hstatic.net/1000383440/product/c80cf018-5d35-4e5f-a137-41751550e2ed_06834925e46145ae97d7dacfa3c82db1_master.jpg" alt="Puma Court Ultra Vapor Gray White 389368-09" />           
+                                <div class="button-add">
+                                    <button type="submit" title="Mua ngay" class="action"">Mua ngay</button>
+                                    <button type="submit" title="Thêm vào giỏ" class="action add-to-cart">Thêm vào giỏ</button>
+                                </div>
+                                <div class="sp-c">
+                                        <h3 class="name">
+                                            Adidas Ultraboost Light 23 Core Black GY9351
+                                        </h3>
+                                </div>
+                                <div>	
+                                    <p class="gia">1,990,000₫</p>
+                                </div>
+                            </div>
+                            <div class="sp">
+                                <img src="https://product.hstatic.net/1000383440/product/bad783b2-5a89-4427-a552-d56c5f2c5036_1d65cdc478764715b3e1f11695964650_master.jpg" alt="Puma Court Ultra Vapor Gray White 389368-09" />           
+                                <div class="button-add">
+                                    <button type="submit" title="Mua ngay" class="action"">Mua ngay</button>
+                                    <button type="submit" title="Thêm vào giỏ" class="action add-to-cart">Thêm vào giỏ</button>
+                                </div>
+                                <div class="sp-c">
+                                        <h3 class="name">
+                                            Onitsuka Tiger Runspark Beige Olive Green Mustard Yellow 1183B480-200
+                                        </h3>
+                                </div>
+                                <div>	
+                                    <p class="gia">2,690,000₫</p>
+                                </div>
+                            </div>
+                            <div class="sp">
+                                <img src="https://product.hstatic.net/1000383440/product/f0b3cabd-2bd8-4b2a-8364-118807be44aa_bc77a661daee4325b5a6f5a89eb65277_master.jpg" alt="Puma Court Ultra Vapor Gray White 389368-09" />           
+                                <div class="button-add">
+                                    <button type="submit" title="Mua ngay" class="action"">Mua ngay</button>
+                                    <button type="submit" title="Thêm vào giỏ" class="action add-to-cart">Thêm vào giỏ</button>
+                                </div>
+                                <div class="sp-c">
+                                        <h3 class="name">
+                                            ADIDAS SAMBA OG WHITE PINK IH2751
+                                        </h3>
+                                </div>
+                                <div>	
+                                    <p class="gia">2,950,000₫</p>
+                                </div>
+                            </div>
+                                                        <div class="sp">
                                 <img src="https://product.hstatic.net/1000383440/product/75838285-fe87-4811-a51f-b64e58adf403_412e542c268f4a38a279a4b2a3887b3f_master.jpg" alt="Puma Court Ultra Vapor Gray White 389368-09" />           
                                 <div class="button-add">
                                     <button type="submit" title="Mua ngay" class="action"">Mua ngay</button>
