--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="./data/css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +25,7 @@
         <header class="header">
             <!-- <div class="grid"> -->
                 <!-- Tên Shop -->
-                <a href="Homepage.html" class="name">P2HandA</a>
+                <a href="Homepage.html" class="name1">P2HandA</a>
     
                 <!-- Thanh Bar -->
                  <nav class="header__navbar">
