--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -7,7 +7,7 @@
     <!-- Reset CSS and Data and Icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./data/css/main.css">
-    <link rel="stylesheet" href="./data/css/footer.css">
+    <!-- <link rel="stylesheet" href="./data/css/footer.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- Font -->
